@@ -1,3 +1,8 @@
+2007-05-27	tsch
+
+	* t/CairoSurface.t: Use proper version checks to decide when to
+	skip the create_for_stream tests.
+
 2007-05-13	tsch
 
 	* Makefile.PL, README, t/Cairo.t, t/CairoPattern.t: Use
